<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_led"
            android:title="@string/nav_devices" />
        <item
            android:id="@+id/nav_brokers"
            android:icon="@drawable/ic_baseline_dns_24"
            android:title="@string/nav_brokers" />
        <item
            android:id="@+id/nav_esptouch"
            android:icon="@drawable/ic_baseline_online_prediction_24"
            android:title="@string/nav_esptouch" />
        <item
            android:id="@+id/nav_socket"
            android:icon="@drawable/ic_connecting"
            android:title="@string/nav_socket" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_circle"
            android:title="@string/nav_about" />
    </group>
</menu>