<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yesiot.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_qrcode"
        android:name="com.example.yesiot.ui.qrcode.QrcodeFragment"
        android:label="@string/nav_qrcode"
        tools:layout="@layout/fragment_qrcode"/>
    <fragment
        android:id="@+id/nav_devices"
        android:name="com.example.yesiot.ui.device.ListFragment"
        android:label="@string/nav_devices"
        tools:layout="@layout/fragment_devices" />
    <fragment
        android:id="@+id/nav_brokers"
        android:name="com.example.yesiot.ui.broker.ListFragment"
        android:label="@string/nav_brokers"
        tools:layout="@layout/fragment_brokers"/>
    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="com.example.yesiot.ui.bluetooth.ListFragment"
        android:label="@string/nav_bluetooth"
        tools:layout="@layout/fragment_bluetooth"/>
    <fragment
        android:id="@+id/nav_esptouch"
        android:name="com.example.yesiot.ui.esptouch.EspTouchFragment"
        android:label="@string/nav_esptouch"
        tools:layout="@layout/fragment_esptouch" />
    <fragment
        android:id="@+id/nav_socket"
        android:name="com.example.yesiot.ui.socket.SocketFragment"
        android:label="@string/nav_socket"
        tools:layout="@layout/fragment_socket" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.yesiot.ui.about.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_broker"
        android:name="com.example.yesiot.ui.broker.BrokerFragment"
        android:label="@string/nav_broker"
        tools:layout="@layout/fragment_broker"/>
    <fragment
        android:id="@+id/nav_device"
        android:name="com.example.yesiot.ui.device.DeviceFragment"
        android:label="@string/nav_device"
        tools:layout="@layout/fragment_device"/>
    <fragment
        android:id="@+id/nav_control"
        android:name="com.example.yesiot.ui.device.ControlFragment"
        android:label="@string/nav_control"
        tools:layout="@layout/fragment_control"/>
    <fragment
        android:id="@+id/nav_panel"
        android:name="com.example.yesiot.ui.panel.PanelFragment"
        android:label="@string/nav_panel"
        tools:layout="@layout/fragment_panel"/>
    <fragment
        android:id="@+id/nav_bluetooth_device"
        android:name="com.example.yesiot.ui.bluetooth.DeviceFragment"
        android:label="{name}"
        tools:layout="@layout/fragment_bluetooth_device"/>
    <fragment
        android:id="@+id/nav_bluetooth_register"
        android:name="com.example.yesiot.ui.bluetooth.RegisterFragment"
        android:label="{name}"
        tools:layout="@layout/fragment_bluetooth_register"/>
    <fragment
        android:id="@+id/nav_bluetooth_button"
        android:name="com.example.yesiot.ui.bluetooth.ButtonFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_bluetooth_button"/>
</navigation>