<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="30dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/app_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/app_name"
        android:text="@string/app_copyright" />

    <TextView
        android:id="@+id/app_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/app_copyright"
        android:text="@string/app_author"/>

    <TextView
        android:id="@+id/app_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@id/app_owner"
        android:text="@string/app_email"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/app_date"
        android:text="@string/app_version" />

    <TextView
        android:id="@+id/app_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/app_date"/>
</RelativeLayout>