<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_remove"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:orderInCategory="102"
        android:title="@string/remove"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/ic_baseline_save_24"
        android:orderInCategory="102"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_option"
        android:icon="@drawable/ic_option"
        android:orderInCategory="102"
        android:title="@string/action_option"
        app:showAsAction="always" />

</menu>