<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cloud"
        android:orderInCategory="101"
        android:icon="@drawable/ic_baseline_cloud_queue_24"
        android:title="@string/action_cloud"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="102"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/nav_device"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="103"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
</menu>