<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_light"
    android:orientation="vertical"
    tools:context=".ui.socket.SocketFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tcp_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tcp_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tcp_hint_ip"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tcp_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tcp_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/tcp_hint_port"
                android:singleLine="true"
                android:text="80" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tcp_button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_off"
            android:text="@string/tcp_button_connect" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/tcp_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tcp_send_option"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tcp_logger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black" />
        </ScrollView>

        <RelativeLayout
            android:id="@+id/tcp_send_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@id/tcp_send_wrapper"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/tcp_option_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:text="@string/tcp_option_url"/>

            <CheckBox
                android:id="@+id/tcp_option_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tcp_option_url"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:text="@string/tcp_option_hex"/>

            <CheckBox
                android:id="@+id/tcp_option_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tcp_option_hex"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:text="@string/tcp_option_ln"/>

            <Button
                android:id="@+id/tcp_button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/tcp_button_clear"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tcp_send_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/tcp_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text"
                android:minLines="2"
                android:maxLines="2"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/tcp_button_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/tcp_button_send" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>